# Adventure

./: .gitignore  CMakeLists.txt  Door.cpp  Door.cpp~  Door.h  Items.cpp  Items.cpp~  Items.h  Items.h~  Main.cpp  README.md  Room.cpp~  Room.h  Room.h~  Setup.cpp  Setup.h  Setup.h~  makefile  makefile~
Core/: Door.cpp  Items.cpp  Main.cpp  Manager.cpp  Room.cpp  Setup.cpp
Header/: Door.h  Manager.h  Room.h
Tests/: CMakeLists.txt  InputTest.cpp
include/: Room.h
src/: CMakeLists.txt  Main.cpp  Room.cpp
src/CPPs/: Input.cpp  Items.cpp  Manager.cpp
src/include/: Input.h  Items.h
